<resources>
    <string name="app_name">NoisePollutionApp</string>
    <string name="app_title">Noise Recorder</string>
    <string name="rec_button">Record</string>
    <string name="stop_button">Stop</string>
    <string name="avg_head">Average</string>
    <string name="avg_max">Maximum</string>
    <string name="alt_avg_head">Alternative Avg</string>
    <string name="alt_max_head">Alternative Max</string>
    <string name="avg_header">Average Decibel</string>
    <string name="alt_avg_header">Average 2</string>
    <string name="acra_toast_text">Report has been sent to developer.</string>
    <string name="live_db">Live Decibel</string>
    <string name="local_service_started">12345</string>
    <string name="gender_title">Gender </string>
    <string name="gender_male">Male </string>
    <string name="gender_female">Female </string>
    <string name="gender_other">Other </string>
    <string name="title_age">Age</string>
    <string name="title_NoiseType"> Noise Source </string>
    <string name="noiseType_anth">Anthropogenic </string>
    <string name="editText_NoiseScale">(e.g. 10, 100)</string>
    <string name="editText_AgeScale">(e.g. 24, 51)</string>
    <string name="noise_type_nat">Natural</string>
    <string name="noise_type_tec">Technological</string>
    <string name="title_noise_scale">Noise Scale</string>
    <string name="button_stop">Stop</string>
    <string name="button_upload">Upload</string>
    <string name="switch_off">OFF</string>
    <string name="switch_on">ON</string>
    <string name="switch_advanced">Advanced</string>
    <string name="title_perception">User Perception</string>
    <string name="calibrate_button">Calibrate</string>
    <string name="calibrate_text_button">Calibrate</string>
    <string name="connect_button">Connect to Calibration Device</string>
    <string name="calibration_title">Calibrate Microphone</string>
    <string name="calibration_group_I_title">Calibration group I</string>
    <string name="group_I_description">Calibrate your phone for measurements in fairly quiet places.</string>
    <string name="calibration_group_II_title">Calibration group II</string>
    <string name="group_II_description">Calibrate your phone for measurements in noisy places.</string>
    <string name="group_III_description">Calibrate your phone for measurements in very noisy places.</string>
    <string name="calibration_group_IV_title">Calibration group IV</string>
    <string name="group_IV_description">Calibrate your phone for measurements in extremely loud places</string>
    <string name="connected_to_device">Connected</string>
    <string name="calibrating">Calibrating..</string>
    <string name="calibrated">Calibrated</string>
    <string name="retry_calibration">Retry</string>
    <string-array name="user_perception">
        <item>extremely quiet</item>
        <item>very quiet</item>
        <item>quiet</item>
        <item>noisy</item>
        <item>very noisy</item>
        <item>extremely noisy</item>
    </string-array>
</resources>