<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".NoisePollutionActivity">


    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/veraman_title"
        android:text="@string/app_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/live_table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/record_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="@dimen/live_row_width_275dp"
                android:layout_height="@dimen/title_row_height_20dp"
                android:layout_gravity="center"
                android:background="@color/turquoise"
                android:gravity="center"
                android:text="@string/live_db"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:id="@+id/liveDecibels"
                android:layout_width="@dimen/live_row_width_275dp"
                android:layout_height="@dimen/title_row_height_20dp"
                android:layout_gravity="center"
                android:background="@color/white_decibel_background"
                android:gravity="center" />
        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="@dimen/live_row_width_275dp"
                android:layout_height="@dimen/title_row_height_20dp"
                android:layout_gravity="center"
                android:background="@color/turquoise"
                android:gravity="center"
                android:text="@string/avg_header"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_width="match_parent">

            <TextView
                android:id="@+id/averageDecibels"
                android:layout_width="@dimen/live_row_width_275dp"
                android:layout_height="@dimen/title_row_height_20dp"
                android:layout_gravity="center"
                android:background="@color/white_decibel_background"
                android:gravity="center" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/record_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rec_button"
        app:layout_constraintBottom_toTopOf="@+id/switch_advanced"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/stop_rec"
        app:layout_constraintTop_toBottomOf="@+id/live_table" />

    <Button
        android:id="@+id/stop_rec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_stop"
        app:layout_constraintBottom_toBottomOf="@+id/record_button"
        app:layout_constraintLeft_toRightOf="@id/record_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/record_button" />

    <Switch
        android:id="@+id/switch_advanced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/switch_advanced"
        android:textOff="@string/switch_off"
        android:textOn="@string/switch_on"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/userInfoTable"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stop_rec" />

    <TableLayout
        android:id="@+id/userInfoTable"
        android:layout_width="@dimen/info_table_width_382dp"
        android:layout_height="@dimen/info_table_height_240dp"
        android:layout_marginTop="@dimen/margin_30dp"
        android:gravity="center"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/upload_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_advanced">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioGroup
                android:id="@+id/radioGroup_gender"
                android:layout_width="@dimen/radioGroup_width_191dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/pink_user_info_title"
                    android:text="@string/gender_title"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black_text"
                    android:textSize="@dimen/text_size_14sp"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/radioMale"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/gender_male"
                    android:textSize="@dimen/text_size_14sp" />

                <RadioButton
                    android:id="@+id/radioFem"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/gender_female"
                    android:textSize="@dimen/text_size_14sp" />

                <RadioButton
                    android:id="@+id/radioOther"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/gender_other"
                    android:textSize="@dimen/text_size_14sp" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/radioGroup_NoiseType"
                android:layout_width="@dimen/radioGroup_width_191dp"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/pink_user_info_title"
                    android:text="@string/title_NoiseType"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/black_text"
                    android:textSize="@dimen/text_size_14sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/editTextAnthropogenic"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/noiseType_anth"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_14sp" />

                <EditText
                    android:id="@+id/editTextNatural"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/noise_type_nat"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_14sp" />

                <EditText
                    android:id="@+id/editTextTechnological"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/noise_type_tec"
                    android:inputType="numberDecimal"
                    android:textAlignment="center"
                    android:textSize="@dimen/text_size_14sp" />
            </RadioGroup>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/pink_user_info_title"
                android:text="@string/title_age"
                android:textAlignment="center"
                android:textColor="@color/black_text"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_perception"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/pink_user_info_title"
                android:text="@string/title_perception"
                android:textAlignment="center"
                android:textColor="@color/black_text"
                android:textSize="@dimen/text_size_14sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/editTextAge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:hint="@string/editText_AgeScale"
                android:inputType="numberDecimal"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_14sp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_perception"
                android:layout_width="match_parent"
                android:layout_height="match_parent"></androidx.appcompat.widget.AppCompatSpinner>
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/button_upload"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userInfoTable" />

    <Button
        android:id="@+id/calibrate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/calibrate_button"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/userInfoTable"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_advanced" />


</androidx.constraintlayout.widget.ConstraintLayout>

